# xhs-creator

./: .gitignore  CLAUDE.md  IMPL_PROMPT.md  PLAN.md  PRD.md  README.md  TEST_REPORT.md  config.yaml.example  plan.md  pyproject.toml  requirements.md  requirements.txt
xhs_creator/: __init__.py  analyzer.py  cli.py  config.py  content2cards.py  formatter.py  llm.py  md2xhs.py  optimizer.py  prompts.py  tracker.py  xhs_client.py
xhs_creator/commands/: analyze.py  config_cmd.py  history_cmd.py  profile_cmd.py  prompt_cmd.py  publish.py  rate.py  recommend_cmd.py  stats.py  title.py  topic.py  trends_cmd.py  write.py
xhs_creator/recommender/: __init__.py  calendar.py  engine.py  profile.py  scorer.py  trends.py
